--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,8 +1,22 @@
 abalone-boai==1.0.0
+attrs==20.3.0
 blessed==1.17.6
 colorama==0.4.4
+cycler==0.10.0
+iniconfig==1.1.1
 inquirer==2.7.0
+kiwisolver==1.3.1
+matplotlib==3.4.1
+numpy==1.20.2
+packaging==20.9
+Pillow==8.2.0
+pluggy==0.13.1
+py==1.10.0
+pyparsing==2.4.7
+pytest==6.2.3
+python-dateutil==2.8.1
 python-editor==1.0.4
 readchar==2.0.1
 six==1.15.0
+toml==0.10.2
 wcwidth==0.2.5
